use Integer valueOf instead of new Integer
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@8397 37aeb1de-b14b-0410-9a0e-82b28170d228